# AI-Trading-Exchange

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  pages.yml
ai-service/: Dockerfile  requirements.txt
ai-service/app/: main.py
ai-service/app/api/: routes.py
ai-service/app/models/: schemas.py
ai-service/app/services/: forecaster.py
ai-service/app/simulations/: rl_agent.py
ai-service/tests/: test_routes.py
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql
backend/src/: main.rs
backend/src/api/: handlers.rs  routes.rs  state.rs
backend/src/config/: mod.rs
backend/src/db/: postgres.rs
backend/src/models/: ai.rs  mod.rs  order.rs  trade.rs
backend/src/services/: ai_client.rs  mod.rs  orders.rs
backend/src/streaming/: kafka.rs  mod.rs  redis_cache.rs
docs/: index.html  script.js  styles.css
frontend/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AISignalPanel.tsx  GlassPanel.tsx  MarketDashboard.tsx  OrderBook.tsx  PortfolioPanel.tsx  Sidebar.tsx  TradeHistory.tsx  TradesPanel.tsx
frontend/src/hooks/: useMarketStore.ts
frontend/src/services/: api.ts
frontend/src/styles/: global.css
frontend/src/types/: index.ts
frontend/src/utils/: wasmLoader.ts
infra/kafka/: README.md
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
infra/redis/: README.md
scripts/: bootstrap.sh
wasm-charts/: Cargo.toml
wasm-charts/src/: lib.rs
